--- a/index.css
+++ b/index.css
@@ -1,11 +1,17 @@
 body {
   background-color: grey;
+  background-image: url("./salad.png");
+  background-size: cover;
+  background-blend-mode: lighten;
+  
 }
 
 .encrypt-or-decrypt-button {
   margin: auto;
   text-align: center;
   margin-bottom: 150px;
+  display: flex;
+  align-items: center;
 }
 
 .flex {
